src/objects/Partner__c.object
<CustomObject>
    <description>DELETE?
Owner - Nicholas Frank</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Account_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This partner already has an existing relationship with the account opportunity.</description>
        <inlineHelpText>This partner already has an existing relationship with the account opportunity.</inlineHelpText>
        <label>Existing Account Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GW_Advocating__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Guidewire is advocating for this partner</description>
        <label>GW Is Advocating To Win</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partners</relationshipLabel>
        <relationshipName>Partners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PartnerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Prospective Partner, Guidewire PartnerConnect, Technology Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partners</relationshipLabel>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Sales_Role__c</fullName>
        <label>Post-Sales Role</label>
        <picklist>
            <picklistValues>
                <fullName>Upgrade SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Other Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Lead</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>The role the partner plays before the sale closes</description>
        <label>Pre-Sales Role</label>
        <picklist>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourced Deal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Partner</label>
    <nameField>
        <displayFormat>{MM}{DD}{YYYY}-{00000}</displayFormat>
        <label>Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>